<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/select_date_title"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_dias"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="@string/available_days_description"
            android:paddingTop="8dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/layout_dias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <!-- Selección de tipo de parking -->
        <TextView
            android:text="@string/select_parking_type_title"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_tipo_plaza"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            app:singleSelection="true"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_coche"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:icon="@drawable/coche"
                app:iconSize="40dp"
                app:iconGravity="textTop"
                android:contentDescription="@string/parking_type_car"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_adaptado"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:icon="@drawable/minsuvalidos"
                app:iconSize="40dp"
                app:iconGravity="textTop"
                android:contentDescription="@string/parking_type_adapted"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_electrico"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:icon="@drawable/coche_electrico"
                app:iconSize="40dp"
                app:iconGravity="textTop"
                android:contentDescription="@string/parking_type_electric"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_moto"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:icon="@drawable/moto"
                app:iconSize="40dp"
                app:iconGravity="textTop"
                android:contentDescription="@string/parking_type_motorbike"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <!-- Selección de horario -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_schedule_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/max_hours_note"
            android:textSize="12sp"
            android:textColor="#888888"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <GridLayout
            android:id="@+id/grid_horas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:alignmentMode="alignMargins"
            android:useDefaultMargins="true"
            android:rowOrderPreserved="false"/>

        <!-- Botón continuar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/continue_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:cornerRadius="16dp" />

    </LinearLayout>
</ScrollView>
